Add -XX:+UseCompactObjectHeaders optimization flag (#384)
Add -XX:+UseCompactObjectHeaders flag, which requires Java 25
and increases performance using compact object headers.

https://openjdk.org/jeps/519